[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/varazslo.png" type="Texture" id=1]
[ext_resource path="res://varazslo.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 16.0

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 192.167

[sub_resource type="CircleShape2D" id=4]
radius = 88.3629

[node name="varazslo" type="KinematicBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="Muzzle" type="Position2D" parent="Sprite"]
position = Vector2( -8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
light_mask = 5
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 2 )

[node name="eszlel" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="eszlel"]
light_mask = 8
shape = SubResource( 3 )

[node name="attackrange" type="Area2D" parent="."]
visible = false
light_mask = 8

[node name="CollisonSHape2D" type="CollisionShape2D" parent="attackrange"]
light_mask = 8
shape = SubResource( 4 )

[node name="guntimer" type="Timer" parent="."]

[node name="Bullets" type="Node" parent="."]
[connection signal="body_entered" from="eszlel" to="." method="_on_eszlel_body_entered"]
[connection signal="body_exited" from="eszlel" to="." method="_on_eszlel_body_exited"]
[connection signal="body_entered" from="attackrange" to="." method="_on_attackrange_body_entered"]
[connection signal="body_exited" from="attackrange" to="." method="_on_attackrange_body_exited"]
[connection signal="timeout" from="guntimer" to="." method="_on_guntimer_timeout"]
